--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
         "@websanova/vue-auth": "^2.21.14-beta",
         "bulma": "^0.8.0",
         "es6-promise": "^4.2.8",
+        "luxon": "^1.21.3",
         "vue": "^2.6.10",
         "vue-axios": "^2.1.5",
+        "vue-datetime": "^1.0.0-beta.11",
         "vue-loading-overlay": "^3.2.0",
-        "vue-router": "^3.1.3"
+        "vue-router": "^3.1.3",
+        "weekstart": "^1.0.1"
     }
 }
