--- a/package.json
+++ b/package.json
@@ -30,8 +30,11 @@
         "bulma-pricingtable": "^0.2.0",
         "es6-promise": "^4.2.8",
         "fsevents": "^2.1.2",
+        "luxon": "^1.21.3",
         "vue-axios": "^2.1.5",
+        "vue-datetime": "^1.0.0-beta.11",
         "vue-notification": "^1.3.20",
-        "vue-router": "^3.1.3"
+        "vue-router": "^3.1.3",
+        "weekstart": "^1.0.1"
     }
 }
